--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Site da legal</title>
     <link rel="stylesheet" href="../Styles/style.css">
 </head>
-<script src="../Scripts/javascript.js"></script>
+<script src="./javascript.js"></script>
 <body onload="load()">
 
     <div class="navbar">
