--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body onload="load()">
 
     <div class="navbar">
+        <div class="logo">Logo</div>
         <div class="menu">
             <a href="./404.html">Home</a>
             <a href="./index.html">Produtos</a>
